# server/app/Connectors/GooglePlayConnector.php
@@ -135,6 +135,7 @@ class GooglePlayConnector implements ConnectorInterface
             'title' => $data['title'] ?? '',
             'subtitle' => $data['subtitle'] ?? null,
             'description' => $description,
+            'promotional_text' => $data['promotional_text'] ?? null,
             'whats_new' => $data['whats_new'] ?? null,
             'icon_url' => $data['icon_url'] ?? null,
             'screenshots' => $screenshots,
